<resources>
    <!-- login screen strings -->
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="button_login">Log In</string>
    <string name="signup_prompt">Don\'t have an account?</string>

    <!-- signup screen strings -->
    <string name="signup_confirm">Sign up</string>
    <string name="password_confirm">Confirm password</string>

    <!-- tvlist strings -->
    <string name="tvlist_activity_name">TVListActivity</string>
    <string name="imageview_content_desc">TV show image</string>

    <!-- toolbar string -->
    <string name="app_name">Showverwatch</string>
    <string name="search_toolbtn">Search TV shows...</string>
    <string name="sort_name">Sort by name</string>
    <string name="sort_vote_avg">Sort by rating</string>
    <string name="sort_last_air">Sort by latest</string>

    <!-- tv detail strings -->
    <string name="rate_string">Rate the show!</string>
</resources>
